@@ -13,6 +13,7 @@
 @comment_line_framebuffer@#include <kernaux/framebuffer.h>
 @comment_line_io@#include <kernaux/io.h>
 @comment_line_mbr@#include <kernaux/mbr.h>
+@comment_line_memmap@#include <kernaux/memmap.h>
 @comment_line_multiboot2@#include <kernaux/multiboot2.h>
 @comment_line_ntoa@#include <kernaux/ntoa.h>
 @comment_line_pfa@#include <kernaux/pfa.h>
