@@ -1,3 +1,7 @@
+2022-06-15  Alex Kotov  <kotovalexarian@gmail.com>
+
+	* include/kernaux/memmap.h: Added
+
 2022-06-13  Alex Kotov  <kotovalexarian@gmail.com>
 
 	* include/kernaux/version.h.in: Added
